--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,31 +21,31 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
 
-                android:text="대시보드"
-                android:textColor="@color/colorPrimary"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
+                android:text="대시보드"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1px"
-                android:background="@color/colorPrimary" />
+                android:background="@color/colorPrimary"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
 
                 <TextView
                     android:id="@+id/weather"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="8dp"
                     android:layout_weight="1"
-                    android:text="Weather"
-                    android:textSize="32sp" />
+                    android:layout_marginRight="8dp"
+                    android:textSize="32sp"
+                    android:text="Weather"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -57,15 +57,15 @@
                         android:id="@+id/temperature"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="17℃"
-                        android:textSize="30sp" />
+                        android:textSize="30sp"
+                        android:text="17℃"/>
 
                     <TextView
                         android:id="@+id/dust"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="8dp"
-                        android:text="100㎍/㎥" />
+                        android:text="100㎍/㎥"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -75,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="7dp"
                 android:gravity="center"
-                android:text="전원이 꺼져 있습니다." />
+                android:text="전원이 꺼져 있습니다."/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -89,68 +89,88 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
 
-                android:text="제어"
-                android:textColor="@color/colorPrimary"
                 android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimary"
+                android:text="제어"/>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1px"
-                android:background="@color/colorPrimary" />
+                android:background="@color/colorPrimary"/>
 
-
-            <Switch
-                android:id="@+id/onoff"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="전원" />
+                android:layout_margin="12dp"
+                android:orientation="horizontal">
+
+                <Switch
+                    android:id="@+id/onoff"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="전원"/>
 
 
-            <Switch
-                android:id="@+id/control"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="자동제어" />
+                <Switch
+                    android:id="@+id/auto"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginTop="8dp"
+                    android:text="자동제어"/>
+            </LinearLayout>
 
             <Button
-                android:id="@+id/auto"
                 style="?android:buttonBarButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="자동제어" />
-
-            <Button
-                android:id="@+id/custom"
-                style="?android:buttonBarButtonStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:text="수동제어" />
-
-            <Button
                 android:id="@+id/timer"
-                style="?android:buttonBarButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="타이머" />
+                android:text="타이머"/>
 
-            <SeekBar
-                android:id="@+id/power"
+            
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
-                android:max="2" />
+                android:orientation="horizontal">
+
+                <Button
+                    style="?android:buttonBarButtonStyle"
+                    android:id="@+id/p1"
+                    android:layout_width="1dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="1단"/>
+
+                <Button
+                    style="?android:buttonBarButtonStyle"
+                    android:id="@+id/p2"
+                    android:layout_width="1dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="2단"/>
+
+                <Button
+                    style="?android:buttonBarButtonStyle"
+                    android:id="@+id/p3"
+                    android:layout_width="1dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="3단"/>
+            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
