Fix little bug and optimize.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,61 +21,53 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
 
-                android:textSize="24sp"
-                android:textStyle="bold"
+                android:text="대시보드"
                 android:textColor="@color/colorPrimary"
-                android:text="대시보드"/>
+                android:textSize="24sp"
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1px"
-                android:background="@color/colorPrimary"/>
+                android:background="@color/colorPrimary" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="12dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/weather"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginRight="8dp"
-                    android:textSize="32sp"
-                    android:text="Weather"/>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="12dp"
-                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/weather"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="Weather"
+                        android:textSize="32sp" />
+
 
                     <TextView
                         android:id="@+id/temperature"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="30sp"
-                        android:text="17℃"/>
+                        android:layout_gravity="center_horizontal"
+                        android:text="17℃"
+                        android:textSize="30sp" />
 
-                    <TextView
-                        android:id="@+id/dust"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:text="100㎍/㎥"/>
-                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/dust"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="100㎍/㎥"
+                    android:textSize="20sp" />
+
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="7dp"
-                android:gravity="center"
-                android:text="전원이 꺼져 있습니다."/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -83,6 +75,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
+
         app:cardCornerRadius="5dp">
 
         <LinearLayout
@@ -90,20 +83,33 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="12dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:textColor="@color/colorPrimary"
-                android:text="제어"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="12dp"
+                    android:text="제어"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="전원이 꺼져 있습니다." />
+            </LinearLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1px"
-                android:background="@color/colorPrimary"/>
+                android:background="@color/colorPrimary" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -112,35 +118,37 @@
                 android:orientation="horizontal">
 
                 <Switch
-                    android:id="@+id/onoff"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    android:text="전원"/>
-
-
-                <Switch
                     android:id="@+id/auto"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginStart="8dp"
                     android:layout_marginEnd="12dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:text="자동제어"/>
+                    android:layout_weight="1"
+                    android:text="자동제어" />
+
+                <Switch
+                    android:id="@+id/onoff"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1"
+                    android:text="전원" />
+
+
             </LinearLayout>
 
             <Button
-                style="?android:buttonBarButtonStyle"
                 android:id="@+id/timer"
+                style="?android:buttonBarButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="타이머"/>
+                android:enabled="false"
+                android:text="타이머" />
 
-            
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -148,28 +156,31 @@
                 android:orientation="horizontal">
 
                 <Button
-                    style="?android:buttonBarButtonStyle"
                     android:id="@+id/p1"
+                    style="?android:buttonBarButtonStyle"
                     android:layout_width="1dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="1단"/>
+                    android:enabled="false"
+                    android:text="1단" />
 
                 <Button
-                    style="?android:buttonBarButtonStyle"
                     android:id="@+id/p2"
+                    style="?android:buttonBarButtonStyle"
                     android:layout_width="1dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="2단"/>
+                    android:enabled="false"
+                    android:text="2단" />
 
                 <Button
-                    style="?android:buttonBarButtonStyle"
                     android:id="@+id/p3"
+                    style="?android:buttonBarButtonStyle"
                     android:layout_width="1dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="3단"/>
+                    android:enabled="false"
+                    android:text="3단" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
